@@ -7,12 +7,6 @@
 * versioned dependencies should add the epochs too (found in
   libpoex-role-sessioninstantiation-perl, where META.yml and Build.PL
   request 'POE 1.005' which should translate to "libpoe-perl (>= 2:1.0050)")
-* package_already_exists(): maybe search for the module and not the package name;
-  otherwise existing packages are missed that have a different name (cf. #530675)
-  This is true for distributions that don't match the contained module, like
-  libintl-perl, which has Locale::* modules.
-  The way to solve this is perhaps to extract "package Foo::Bar" from all *.pm
-  files and look them in the apt file contents. Lots of work for little gain.
 * --refresh: add --only <file> option: done, but "--only control" also
   touches d/rules if quilt is used
 * #536838: Incorrect assumptions about perl module version -> debian package
