@@ -22,3 +22,6 @@
         Use its ability to compare and drop Debian::Version
 
     Dependenc{y,ies}: reduce '--' to '-' in the NAME POD section
+
+    make: try harder to discover already existing package by looking up
+        distribution modules in APT contents and dpkg file lists.
